static/scss/index.scss
$color1: #dae8ec;
$color2: #dac5bc;
$color3: #b48464;
$color4: #572313;
$color5: #1d1611;

#hero-image {
    width: 100vw;
    height: 30rem;
    position: relative;
    background-color: black;
    img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        opacity: 0.3;
        border-bottom: 0.5rem double white;
        border-top: 0.5rem double white;
    }
    div {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-top: 2rem;
        h2 {
            color: white;
            margin-bottom: 10rem;
            background-color: rgba(0, 0, 0, 0.8);
            padding: 0.5rem 1rem 0.5rem 1rem;
        }
        div {
            display: flex;
            flex-direction: row;
            p {
                color: white;
                margin-left: 2.5rem;
                margin-right: 2.5rem;
                font-size: 1.2rem;
                background-color: rgba(0, 0, 0, 0.8);
                padding: 0.5rem 1rem 0.5rem 1rem;
            }
        }
    }
}

h2 {
    color: white;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    text-transform: uppercase;
    margin-top: 4rem;
}
.common {
    height: 25rem;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1rem;
    div {
        height: 100%;
        width: 100%;
        background-color: $color1;
        border: 1px solid $color3;
        padding: 0;
        a {
            height: 100%;
            width: 100%;
            img {
                width: 100%;
                height: 70%;
                object-fit: scale-down;
                padding: 0.5rem;
            }
            p {
                height: 20%;
                width: 100%;
                color: $color5;
                text-align: center;
                margin: 0;
                display: flex;
                align-items: center;
                justify-content: center;
                padding-left: 0.5rem;
                padding-right: 0.5rem;
                font-size: 1.2rem;
                font-weight: 500;
            }
            p:first-of-type {
                font-weight: 400;
                font-size: 1rem;
                height: 10%;
                i {
                    color: #c72c43;
                    font-size: 1.2rem;
                }
            }
        }
        a:focus, a:hover {
            text-decoration: none;
            box-shadow: inset 50rem 50rem rgba(0, 0, 0, 0.2);
            height: 100%;
            width: 100%;
            display: inline-block;
            p {
                text-decoration: underline;
            }
            p:first-of-type {
                text-decoration: none;
            }
        }
    }              
}

.flickity-page-dots .dot {
    background: white;
}
.flickity-button {
    border: 0.12rem solid $color5;
    color: $color5;
}

@media only screen and (max-width: 1200px) {
    .common {
        width: 100%;
    }
    #hero-image {
    div {
        h2 {
            margin-bottom: 20rem;
        }
        div {
            display: flex;
            flex-direction: column;
            p {
                margin-left: auto;
                margin-right: auto;
            }
        }
    }
}
}

@media only screen and (max-width: 600px) {
    #hero-image {
    div {
        padding-left: 1rem;
        padding-right: 1rem;
        h2 {
            font-size: 1.2rem;
        }
        div {
            p {
                font-size: 1.1rem;
            }
        }
    }
}
}

